fix css file extension, code simplification

--- a/portfolio/infos/templates/infos/main.html
+++ b/portfolio/infos/templates/infos/main.html
@@ -4,8 +4,8 @@
   {% load static %}
    <meta charset="UTF-8">
    <title>{% block title %}Title{% endblock %}</title>
-   <!--link rel="stylesheet" href="{% static 'css/styles.css' %}"-->
-   <style>
+   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+   <!--style>
 
 
 a.act1{
@@ -33,7 +33,7 @@ ul li {
 }
 
 
-   </style>
+   </style-->
 </head>
 <body>
 <div id="content">
